Prepare jdk 17 release