@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.api.components.model.datalist.impl;
 
 import static de.cuioss.jsf.api.components.model.datalist.AddStatus.PERSISTED;
@@ -6,7 +21,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.cuioss.jsf.api.components.model.datalist.EditEvent;
 import de.cuioss.jsf.api.components.model.datalist.EditStatus;
@@ -139,13 +153,13 @@ public abstract class AbstractEditableDataListModel<T extends Serializable> impl
     public List<T> getDeletedItems() {
         return getDisplayItems().stream()
                 .filter(item -> item.isMarkedForDelete() && PERSISTED.equals(item.getAddStatus()))
-                .map(ItemWrapper::getWrapped).collect(Collectors.toList());
+                .map(ItemWrapper::getWrapped).toList();
     }
 
     @Override
     public List<T> getResultItems() {
         return getDisplayItems().stream().filter(item -> !item.isMarkedForDelete()).map(ItemWrapper::getWrapped)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
