@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.api.components.util;
 
 import static java.util.Objects.requireNonNull;
@@ -38,7 +53,7 @@ public enum DisableUIComponentStrategy {
     private final Class<? extends UIComponent> clazz;
 
     DisableUIComponentStrategy(final Class<? extends UIComponent> klass) {
-        this.clazz = klass;
+        clazz = klass;
     }
 
     /**
@@ -63,7 +78,7 @@ public enum DisableUIComponentStrategy {
             }
         }
         throw new IllegalArgumentException(
-                String.format("[%s] has no coresponding disable strategy", component.getClass().getSimpleName()));
+                "[%s] has no coresponding disable strategy".formatted(component.getClass().getSimpleName()));
     }
 
 }
