@@ -1,7 +1,21 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.components.converter;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import javax.faces.component.UIComponent;
 import javax.faces.context.FacesContext;
@@ -39,8 +53,7 @@ public class CodeTypeListDisplayConverter extends AbstractConverter<Collection<?
     protected String convertToString(final FacesContext context, final UIComponent component,
             final Collection<? extends CodeType> value) throws ConverterException {
         var locale = localeProducerAccessor.getValue().getLocale();
-        return Joiner.on(separator).skipNulls()
-                .join(value.stream().map(code -> code.getResolved(locale)).collect(Collectors.toList()));
+        return Joiner.on(separator).skipNulls().join(value.stream().map(code -> code.getResolved(locale)).toList());
     }
 
 }
