@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.test.mock.application;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -7,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.faces.application.FacesMessage;
 import javax.faces.application.FacesMessage.Severity;
@@ -94,7 +108,7 @@ public class MessageProducerMock extends MessageProducerImpl implements BeanConf
      */
     public List<FacesMessage> getGlobalMessagesForKey(final FacesMessage.Severity severity, final String messageKey) {
         return globalMessages.stream().filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
-                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).collect(Collectors.toList());
+                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).toList();
     }
 
     /**
@@ -106,7 +120,7 @@ public class MessageProducerMock extends MessageProducerImpl implements BeanConf
     public List<FacesMessage> getComponentMessagesForKey(final FacesMessage.Severity severity,
             final String messageKey) {
         return componentMessages.stream().filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
-                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).collect(Collectors.toList());
+                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).toList();
     }
 
     /**
